# streamlit

./: .gitignore  README.md
ad_gpt/: dashboard.py  vendas_1000.csv
ad_gpt/mz_ambiente/: pyvenv.cfg
analise-dados/: analise-vendas.py  pyproject.toml  vendas_1000.csv  vendas_csv.py
calculadora_imc/: imc.py  pyproject.toml
