[tool.poetry]
name = "calculadora-imc"
version = "0.1.0"
description = "Calculadora de IMC com streamlit"
authors = ["Mazinho Big Daddy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
